# dao-genesis

./: .coverage  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pr_body.md  pyproject.toml  review_memory_skill_spec.md  test_review.md
.github/workflows/: auto_review.yml  ci.yml  memory_ci.yml
.storage/reviews/: REV-20260417-001.json  REV-20260417-002.json  REV-20260417-003.json  REV-20260417-004.json
.trae/: mcp.json
.trae/specs/create-review-memory-skill/: checklist.md  spec.md  tasks.md
.trae/specs/extend-memory-capabilities/: checklist.md  spec.md  tasks.md
docs/: review-mechanism.md  spec.md
reviews/: review_20260417_223421.md  review_20260417_223714.md
scripts/: build_memory_cache.py  config.py  context_injector.py  github_integration.py  inject_memory.py  knowledge_graph.py  manage_memory.py  memory_lifecycle.py  migrate_memory.py  run_tests.sh  search_memory.py  sync_global.py  validate_reviews.py  web_server.py
src/: error_collector.py  goal_issue_tracker.py  graphql_client.py  graphql_schema.py  graphql_server_app.py  mcp_server.py  memory-schema.json  review-template.md  review_automation.py  review_search.py  review_system.py  suggestion_generator.py  system-prompt.md  task_tracker.py  trigger.py
tests/: conftest.py  test_build_memory_cache.py  test_context_injector.py  test_github_integration.py  test_inject_memory.py  test_knowledge_graph.py  test_manage_memory.py  test_mcp_server.py  test_memory_lifecycle.py  test_migrate_memory.py  test_search_memory.py  test_sync_global.py
web/: app.js  index.html
(+20 files in other folders)
